added more details to Jupyter notebook

--- a/Processing.ipynb
+++ b/Processing.ipynb
@@ -19,21 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: 'texts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-8be0c8008cfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'texts'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'texts'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('texts')"
@@ -50,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1451,7 @@
        " ...]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1472,7 @@
        "1169"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1492,7 @@
        "1169"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1897,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2168,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2263,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2434,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 62,
    "metadata": {
     "scrolled": false
    },
@@ -2509,12 +2497,12 @@
    "source": [
     "## Counting words and sentences\n",
     "\n",
-    "In this next section we import the textstat package, and then count the number of words and sentences in each text."
+    "In this next section we first create a new loop of all publisher names with cleaned files (to save effort), then import the textstat package, and count the number of words and sentences in each text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2581,12 +2569,13 @@
    "source": [
     "## Complexity Tests\n",
     "\n",
-    "In the next section, we run three analyses of complexity of the texts: the SMOG test, the Flesch Reading Ease test, and a \"combined\" test that looks at all of the complexity tests available in textstat. These are added to the word and sentence counts from the previous section for easy CSV creation. "
+    "In the next section, we run three analyses of complexity of the texts: the SMOG test, the Flesch Reading Ease test, and a \"combined\" test that looks at all of the complexity tests available in textstat. \n",
+    "These use the same publist_cleaned loop from the previous section, and the new complexity counts are added to the word and sentence counts from the previous section for easy CSV creation. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
