added original texts to TF and Oasis, new numbers in csv file and Jupyter Notebook

--- a/Processing.ipynb
+++ b/Processing.ipynb
@@ -222,6 +222,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "oasis1 = open('oasis_primary.txt', encoding=\"utf-8\").read()\n",
+    "oasis2 = open('oasis_secondary.txt', encoding=\"utf-8\").read()\n",
+    "oasis3 = open('oasis_tertiary.txt', encoding=\"utf-8\").read()\n",
+    "oasis = oasis1+oasis2+oasis3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RTRC1 = open('RTRC_primary.txt', encoding=\"utf-8\").read()\n",
     "RTRC2 = open('RTRC_secondary.txt', encoding=\"utf-8\").read()\n",
     "RTRC3 = open('RTRC_tertiary.txt', encoding=\"utf-8\").read()\n",
@@ -230,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,11 +382,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "publist = [(\"ACRL\", acrl), (\"BOAI\", boai), (\"BRILL\", brill), (\"ELSEVIER\", elsevier), (\"SPRINGER\", springer), (\"SAGE\", sage), (\"IOP\", iop), (\"CAMBRIDGE\", cambridge), (\"PROQUEST\", proquest), (\"TF\", tf), (\"OXFORD\", oxford), (\"NATURE\", nature), (\"WILEY\", wiley), (\"DEGRUYTER\", degruyter), (\"BMJ\", bmj), (\"HINDAWI\", hindawi), (\"SPARC\", sparc), (\"HARVARD\", harvard), (\"RTRC\", rtrc), (\"SUBER\", suber), (\"CORNELL\", cornell), (\"KU\", ku), (\"WIKIPEDIA\", wikipedia), (\"CREATIVECOMMONS\", creativecommons), (\"OAWG\", oawg), (\"MIT\", mit), (\"SHERPA\", sherpa), (\"PLOS\", plos)]"
+    "publist = [(\"ACRL\", acrl), (\"BOAI\", boai), (\"BRILL\", brill), (\"ELSEVIER\", elsevier), (\"SPRINGER\", springer), (\"SAGE\", sage), (\"IOP\", iop), (\"CAMBRIDGE\", cambridge), (\"PROQUEST\", proquest), (\"TF\", tf), (\"OXFORD\", oxford), (\"OASIS\", oasis), (\"NATURE\", nature), (\"WILEY\", wiley), (\"DEGRUYTER\", degruyter), (\"BMJ\", bmj), (\"HINDAWI\", hindawi), (\"SPARC\", sparc), (\"HARVARD\", harvard), (\"RTRC\", rtrc), (\"SUBER\", suber), (\"CORNELL\", cornell), (\"KU\", ku), (\"WIKIPEDIA\", wikipedia), (\"CREATIVECOMMONS\", creativecommons), (\"OAWG\", oawg), (\"MIT\", mit), (\"SHERPA\", sherpa), (\"PLOS\", plos)]"
    ]
   },
   {
@@ -388,41 +400,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACRL, 93\n",
-      "BOAI, 199\n",
-      "BRILL, 51\n",
-      "ELSEVIER, 91\n",
-      "SPRINGER, 64\n",
-      "SAGE, 56\n",
-      "IOP, 44\n",
-      "CAMBRIDGE, 49\n",
-      "PROQUEST, 2\n",
-      "TF, 411\n",
-      "OXFORD, 148\n",
-      "NATURE, 69\n",
-      "WILEY, 26\n",
-      "DEGRUYTER, 122\n",
-      "BMJ, 27\n",
-      "HINDAWI, 7\n",
-      "SPARC, 24\n",
-      "HARVARD, 331\n",
-      "RTRC, 188\n",
-      "SUBER, 150\n",
-      "CORNELL, 93\n",
-      "KU, 42\n",
-      "WIKIPEDIA, 416\n",
-      "CREATIVECOMMONS, 10\n",
-      "OAWG, 38\n",
-      "MIT, 153\n",
-      "SHERPA, 74\n",
-      "PLOS, 50\n"
+      "93\n",
+      "199\n",
+      "51\n",
+      "91\n",
+      "64\n",
+      "56\n",
+      "44\n",
+      "49\n",
+      "2\n",
+      "211\n",
+      "148\n",
+      "76\n",
+      "69\n",
+      "26\n",
+      "122\n",
+      "27\n",
+      "7\n",
+      "24\n",
+      "331\n",
+      "188\n",
+      "150\n",
+      "93\n",
+      "42\n",
+      "416\n",
+      "10\n",
+      "38\n",
+      "153\n",
+      "74\n",
+      "50\n"
      ]
     }
    ],
@@ -442,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1464,7 @@
        " ...]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,26 +1472,6 @@
    "source": [
     "import re\n",
     "re.findall(r'<[^<]+>', acrl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1169"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(re.findall(r'<[^<]+>', acrl))"
    ]
   },
   {
@@ -1498,12 +1491,32 @@
     }
    ],
    "source": [
-    "acrl.count('<')"
+    "len(re.findall(r'<[^<]+>', acrl))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1169"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acrl.count('<')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1885,25 +1898,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "﻿About this topicFind out why you should consider publishing your journal articles open access (OA). We look at the range of OA opportunities available to help you maximize the reach and impact of your research. This page also includes all the details you need to publish open access with Taylor & Francis and meet any requirements of your research funder.\t\t\t\t\t\n",
-      "\t\t\t\t\n",
-      "\t\t\t\n",
-      "\t\t\t\n",
-      "\t\t\t\t\n",
-      "\t\t\t\t\t\n",
-      "\t\t\t\t\t\t\n",
-      "\t\t\t\t\t\t\tChapters\n",
-      "\t\t\t\t\t\t\n",
-      "\t\t\t\t\t\t\n",
-      "\t\t\t\t\t\t\t\n",
-      "\t\t\t\t\t\t\t\tWhat is open access?What are the benefits of open access publ\n"
+      "﻿Publishing Open Access \n",
+      "with Taylor & Francis | the basics \n",
+      "What is Open Access? \n",
+      "Open Access (OA) means you can publish your \n",
+      "research so it is free to access online as soon \n",
+      "as it is published, meaning anyone can read \n",
+      "(and cite) your work. \n",
+      "Publishing OA also means published research can \n",
+      "generally be re-used by third parties with few, or \n",
+      "no, restrictions. \n",
+      "Why publish OA? \n",
+      "Choosing to publish OA has many benefits: \n",
+      ". It can increase the discoverability of your research. \n",
+      "This increased vis\n"
      ]
     }
    ],
@@ -1914,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1967,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "﻿\n",
+      "\t\t\t\t\tOpen Access: What is it and why should we have it?\t\t\t\n",
+      "\t\t\t\t\t\t\n",
+      "\t\t\t\t\n",
+      "\t\t\n",
+      "\t\t\t\t\n",
+      "\t\t\t\t\n",
+      "\t\t\n",
+      "\t\t\t\t\t\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\t\n",
+      "\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\t\t\t\t\tGeneral\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Open Access provides the means to maximise the visibility, and thus the uptake and use, of research outputs. Open Access is the immediate, online, free availability of research outputs without the severe restrictions on use commonly imposed by publisher copyright agreements. It is definitely not vanity publishing or self-publishing, nor abou\n"
+     ]
+    }
+   ],
+   "source": [
+    "oasis_cleaned=re.sub(r'<[^<]+>', '', oasis)\n",
+    "print(oasis_cleaned[:500])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2398,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {
     "scrolled": false
    },
@@ -2502,16 +2560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "publist_cleaned = [(\"ACRL\", acrl_cleaned), (\"BOAI\", boai_cleaned), (\"BRILL\", brill_cleaned), (\"ELSEVIER\", elsevier_cleaned), (\"SPRINGER\", springer_cleaned), (\"SAGE\", sage_cleaned), (\"IOP\", iop_cleaned), (\"CAMBRIDGE\", cambridge_cleaned), (\"PROQUEST\", proquest_cleaned), (\"TF\", tf_cleaned), (\"OXFORD\", oxford_cleaned), (\"NATURE\", nature_cleaned), (\"WILEY\", wiley_cleaned), (\"DEGRUYTER\", degruyter_cleaned), (\"BMJ\", bmj_cleaned), (\"HINDAWI\", hindawi_cleaned), (\"SPARC\", sparc_cleaned), (\"HARVARD\", harvard_cleaned), (\"RTRC\", rtrc_cleaned), (\"SUBER\", suber_cleaned), (\"CORNELL\", cornell_cleaned), (\"KU\", ku_cleaned), (\"WIKIPEDIA\", wikipedia_cleaned), (\"CREATIVECOMMONS\", creativecommons_cleaned), (\"OAWG\", oawg_cleaned), (\"MIT\", mit_cleaned), (\"SHERPA\", sherpa_cleaned), (\"PLOS\", plos_cleaned)]"
+    "publist_cleaned = [(\"ACRL\", acrl_cleaned), (\"BOAI\", boai_cleaned), (\"BRILL\", brill_cleaned), (\"ELSEVIER\", elsevier_cleaned), (\"SPRINGER\", springer_cleaned), (\"SAGE\", sage_cleaned), (\"IOP\", iop_cleaned), (\"CAMBRIDGE\", cambridge_cleaned), (\"PROQUEST\", proquest_cleaned), (\"TF\", tf_cleaned), (\"OXFORD\", oxford_cleaned), (\"OASIS\", oasis), (\"NATURE\", nature_cleaned), (\"WILEY\", wiley_cleaned), (\"DEGRUYTER\", degruyter_cleaned), (\"BMJ\", bmj_cleaned), (\"HINDAWI\", hindawi_cleaned), (\"SPARC\", sparc_cleaned), (\"HARVARD\", harvard_cleaned), (\"RTRC\", rtrc_cleaned), (\"SUBER\", suber_cleaned), (\"CORNELL\", cornell_cleaned), (\"KU\", ku_cleaned), (\"WIKIPEDIA\", wikipedia_cleaned), (\"CREATIVECOMMONS\", creativecommons_cleaned), (\"OAWG\", oawg_cleaned), (\"MIT\", mit_cleaned), (\"SHERPA\", sherpa_cleaned), (\"PLOS\", plos_cleaned)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2520,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2536,8 +2594,9 @@
       "IOP, 2228 , 49\n",
       "CAMBRIDGE, 1586 , 59\n",
       "PROQUEST, 631 , 15\n",
-      "TF, 17376 , 719\n",
+      "TF, 9641 , 375\n",
       "OXFORD, 2872 , 81\n",
+      "OASIS, 2690 , 63\n",
       "NATURE, 2229 , 56\n",
       "WILEY, 1031 , 20\n",
       "DEGRUYTER, 734 , 16\n",
@@ -2575,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2591,8 +2650,9 @@
       "IOP, 2228 , 49 , 18.6 , 25.29 , 21.0\n",
       "CAMBRIDGE, 1586 , 59 , 14.2 , 44.17 , 14.0\n",
       "PROQUEST, 631 , 15 , 20.2 , 3.36 , 20.0\n",
-      "TF, 17376 , 719 , 14.2 , 46.91 , 11.0\n",
+      "TF, 9641 , 375 , 14.4 , 45.39 , 14.0\n",
       "OXFORD, 2872 , 81 , 17.1 , 10.06 , 18.0\n",
+      "OASIS, 2690 , 63 , 19.5 , -14.18 , 20.0\n",
       "NATURE, 2229 , 56 , 18.2 , 22.62 , 18.0\n",
       "WILEY, 1031 , 20 , 19.9 , -14.75 , 20.0\n",
       "DEGRUYTER, 734 , 16 , 22.0 , -212.0 , 22.0\n",
